--- a/MockFileDownloadTool/Web.config
+++ b/MockFileDownloadTool/Web.config
@@ -51,5 +51,14 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Extensibility.Web" preCondition="managedHandler" />
     </modules>
+    <handlers>
+      <add name="UrlRoutingHandler"
+           type="System.Web.Routing.UrlRoutingHandler, 
+               System.Web, Version=4.0.0.0, 
+               Culture=neutral, 
+               PublicKeyToken=b03f5f7f11d50a3a"
+           path="/CreateFile/*"
+           verb="GET"/>
+    </handlers>
   </system.webServer>
 </configuration>
