--- a/MockFileDownloadTool/MockFileDownloadTool.csproj
+++ b/MockFileDownloadTool/MockFileDownloadTool.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\FileContentHeadersResult.cs" />
     <Compile Include="Models\GenerateFileViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
